--- a/app/globals.css
+++ b/app/globals.css
@@ -67,7 +67,7 @@
 
 /* Start of Mobile & Tablet Hamburger */
 .hamburger svg {
-  @apply w-[2.5em];
+  @apply w-[40px];
   transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hamburger svg > path.line {
